changes to the department controller and new open api file
