# apiProjects/api/swagger/v1/swagger.json
@@ -87,26 +87,37 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/hospitalApi.DTOs.Outputs.DepartmentOutputDto"
-                  }
+                  "$ref": "#/components/schemas/hospitalApi.DTOs.Outputs.DepartmentOutputDto"
                 }
               },
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/hospitalApi.DTOs.Outputs.DepartmentOutputDto"
-                  }
+                  "$ref": "#/components/schemas/hospitalApi.DTOs.Outputs.DepartmentOutputDto"
                 }
               },
               "text/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/hospitalApi.DTOs.Outputs.DepartmentOutputDto"
-                  }
+                  "$ref": "#/components/schemas/hospitalApi.DTOs.Outputs.DepartmentOutputDto"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
                 }
               }
             }
@@ -183,6 +194,26 @@
               "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/hospitalApi.DTOs.Outputs.DepartmentOutputDto"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
                 }
               }
             }
